knightcrawler/ingressroute-knightcrawler.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: knightcrawler.${dns_domain}
  namespace: knightcrawler
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`knightcrawler.${dns_domain}`)
      kind: Rule
      services:
        - name: knightcrawler-addon
          kind: Service
          port: 7000
      middlewares:  
        - name: headers-add-cors-for-stremio
          namespace: traefik
    - match: Host(`knightcrawler.${dns_domain}`) && PathPrefix(`/{something:.*}/realdebrid={something:.+/stream}`)
      kind: Rule
      services:
        - name: knightcrawler-addon
          kind: Service
          port: 7000
      middlewares:  
        - name: headers-add-cors-for-stremio
          namespace: traefik
        - name: redirectregex-realdebrid-api-removal
          namespace: traefik
    - match: Host(`knightcrawler.${dns_domain}`) && PathRegexp(`^/(.*)/realdebrid=(.+)/stream`)
      kind: Rule
      services:
        - name: knightcrawler-addon
          kind: Service
          port: 7000
      middlewares:  
        - name: headers-add-cors-for-stremio
          namespace: traefik
        - name: redirectregex-realdebrid-api-removal
          namespace: traefik
    # This is a search, subject to rate-limiting
    - match: Host(`knightcrawler.${dns_domain}`) && PathPrefix(`/stream/`)
      kind: Rule
      services:
        - name: knightcrawler-addon
          kind: Service
          port: 7000
      middlewares:  
        - name: chain-stream
